--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@
 .deleteButtonStyle {
   display: flex;
   justify-content: flex-end;
+  margin-left: 1100px;
 }
 
 @media screen and (max-width: 800px) {
